<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:text="@string/sign_in"
        android:textColor="@color/purple_200"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/username1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="229dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username1"
        android:layout_marginTop="23dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnsignin1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnforgot"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/btnforgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password1"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/showpasslog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password1"
        android:text="@string/show_password"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/btnsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnsignin1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/new_user_sign_up_here"
        android:textColor="@color/black"
        android:textSize="16sp" />

</RelativeLayout>