<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:padding="10dp"
    tools:context=".ResetActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:text="@string/reset_password"
        android:textColor="@color/purple_200"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/username_reset_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="234dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_reset_text"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/repassword_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_reset"
        android:layout_marginTop="20dp"
        android:hint="@string/retype_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnconfirm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repassword_reset"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/confirm" />

</RelativeLayout>