<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:padding="10dp"
    tools:context=".RegisterActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:text="@string/sign_up"
        android:textColor="@color/purple_200"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="10dp"
        android:hint="@string/retype_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/btnsignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnsignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="Already have an account? Sign In here"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/showpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/repassword"
        android:layout_marginTop="5dp"
        android:text="@string/show_password" />

</RelativeLayout>