<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:padding="10dp"
    tools:context=".PasswordActivity">

    <TextView
        android:id="@+id/username_reset_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:text="@string/reset_password"
        android:textColor="@color/purple_200"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/enter_your_username"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/username_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_marginTop="20dp"
        android:hint="@string/username" />

    <Button
        android:id="@+id/btnreset"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_reset"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/reset_password" />

</RelativeLayout>